--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
+          HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
           token: ${{ github.token }}
           branch: main
 
