--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,14 +39,14 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: brew install-bundler-gems
 
-      - name: Adjust Git configuration
-        run: |
-          git lfs uninstall || true
-          git lfs uninstall --local || true
-          git lfs uninstall --system || true
-          git config --global submodule.recurse 1
-          git config --global fetch.parallel 10
-          git config --global submodule.fetchJobs 10
+      # - name: Adjust Git configuration
+      #   run: |
+      #     git lfs uninstall || true
+      #     git lfs uninstall --local || true
+      #     git lfs uninstall --system || true
+      #     git config --global submodule.recurse 1
+      #     git config --global fetch.parallel 10
+      #     git config --global submodule.fetchJobs 10
 
       - run: brew test-bot --only-cleanup-before
 
@@ -56,6 +56,11 @@ jobs:
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
       - name: Upload bottles as artifact
         if: github.event_name == 'pull_request'
