--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,21 @@ jobs:
 
       - run: brew test-bot --only-tap-syntax
 
+
+
+      - name: Upload bottles as artifact
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@main
+        with:
+          name: bottles
+          path: '*.bottle.*'
+
+
+
+
+
+
+
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
 
