--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,6 +56,12 @@ jobs:
 
 
 
+      - name: Set up Node
+        if: github.event_name == 'pull_request'
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: Upload bottles as artifact
         if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@main
