--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,10 @@ jobs:
             os-arch: x64
 
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: Prepare workspace
         run: rm -rf "${{ github.workspace }}/*"
 
@@ -55,12 +59,6 @@ jobs:
       - run: brew test-bot --only-tap-syntax
 
 
-
-      - name: Set up Node
-        if: github.event_name == 'pull_request'
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
 
       - name: Upload bottles as artifact
         if: github.event_name == 'pull_request'
