--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ on:
         required: false
         type: string
     secrets:
-      GITHUB_TOKEN:
+      GH_PERSONAL_ACCESS_TOKEN:
         required: true
 
 jobs:
@@ -26,15 +26,15 @@ jobs:
 
       - name: Pull bottles
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           HOMEBREW_GITHUB_PACKAGES_USER: ${{ github.actor }}
         run: brew pr-pull --debug --tap=${{ github.repository }} ${{ inputs.pull-request-number }}
 
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           branch: main
 
       - name: Delete branch
