--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ on:
         required: true
         type: string
     secrets:
-      GITHUB_TOKEN:
+      GH_PERSONAL_ACCESS_TOKEN:
         required: true
       AWS_ACCESS_KEY_ID:
         required: true
@@ -55,7 +55,7 @@ jobs:
         uses: machulav/ec2-github-runner@v2
         with:
           mode: start
-          github-token: ${{ inputs.GITHUB_TOKEN }}
+          github-token: ${{ inputs.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-instance-type: ${{ inputs.ec2-instance-type }}
           ec2-image-id: ${{ inputs.ec2-image-id }}
           security-group-id: ${{ secrets.AWS_SECURITY_GROUP_ID }}
@@ -114,6 +114,6 @@ jobs:
         uses: machulav/ec2-github-runner@v2
         with:
           mode: stop
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           label: ${{ needs.start-runner.outputs.label }}
           ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
