--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -18,7 +18,7 @@ jobs:
       ec2-instance-type: mac1.metal
       ec2-image-id: ami-056dc9ac02058c12d
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -38,7 +38,7 @@ jobs:
       ec2-instance-type: mac1.metal
       ec2-image-id: ami-0a35a79762786ea7f
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -57,7 +57,7 @@ jobs:
       ec2-instance-type: mac1.metal
       ec2-image-id: ami-056dc9ac02058c12d
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -77,7 +77,7 @@ jobs:
       ec2-instance-type: mac1.metal
       ec2-image-id: ami-0a35a79762786ea7f
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -97,7 +97,7 @@ jobs:
       ec2-instance-type: mac1.metal
       ec2-image-id: ami-0458f0fc32e5edfda
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -120,4 +120,4 @@ jobs:
       pull-request-number: ${{ github.event.pull_request.number }}
       origin-branch-to-delete: ${{ github.event.pull_request.head.repo.fork && '' || github.event.pull_request.head.ref }}
     secrets:
-      GITHUB_ACCESS_TOKEN: ${{ github.token }}
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
