Use ec2-launch-template

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -15,15 +15,12 @@ jobs:
       os-type: macos
       os-gen: monterey
       os-arch: arm64
-      ec2-instance-type: mac1.metal
-      ec2-image-id: ami-056dc9ac02058c12d
+      ec2-launch-template: github-runner-macos-monterey-arm64
     secrets:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-      AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
       RUNNER_TOKEN: ${{ secrets.MACOS_ARM64_EC2_RUNNER_TOKEN }}
 
   test-bot-macos-big-sur-arm64-ec2:
@@ -35,15 +32,12 @@ jobs:
       os-type: macos
       os-gen: big-sur
       os-arch: arm64
-      ec2-instance-type: mac1.metal
-      ec2-image-id: ami-0a35a79762786ea7f
+      ec2-launch-template: github-runner-macos-big-sur-arm64
     secrets:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-      AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
       RUNNER_TOKEN: ${{ secrets.MACOS_ARM64_EC2_RUNNER_TOKEN }}
 
   test-bot-macos-monterey-x86_64-ec2:
@@ -54,15 +48,12 @@ jobs:
       os-type: macos
       os-gen: monterey
       os-arch: x86_64
-      ec2-instance-type: mac1.metal
-      ec2-image-id: ami-056dc9ac02058c12d
+      ec2-launch-template: github-runner-macos-monterey-x86_64
     secrets:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-      AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
       RUNNER_TOKEN: ${{ secrets.MACOS_X86_64_EC2_RUNNER_TOKEN }}
 
   test-bot-macos-big-sur-x86_64-ec2:
@@ -74,15 +65,12 @@ jobs:
       os-type: macos
       os-gen: big-sur
       os-arch: x86_64
-      ec2-instance-type: mac1.metal
-      ec2-image-id: ami-0a35a79762786ea7f
+      ec2-launch-template: github-runner-macos-big-sur-x86_64
     secrets:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-      AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
       RUNNER_TOKEN: ${{ secrets.MACOS_X86_64_EC2_RUNNER_TOKEN }}
 
   test-bot-macos-catalina-x86_64-ec2:
@@ -94,15 +82,12 @@ jobs:
       os-type: macos
       os-gen: catalina
       os-arch: x86_64
-      ec2-instance-type: mac1.metal
-      ec2-image-id: ami-0458f0fc32e5edfda
+      ec2-launch-template: github-runner-macos-catalina-x86_64
     secrets:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-      AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
       RUNNER_TOKEN: ${{ secrets.MACOS_X86_64_EC2_RUNNER_TOKEN }}
 
   pr-pull-all:
