--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,12 @@
 name: brew pr-pull
-
 on:
-  workflow_call:
-    inputs:
-      pull-request-number:
-        required: true
-        type: number
-      origin-branch-to-delete:
-        required: false
-        type: string
-    secrets:
-      GH_PERSONAL_ACCESS_TOKEN:
-        required: true
-
+  pull_request_target:
+    types:
+      - labeled
 jobs:
   pr-pull:
+    if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ubuntu-latest
-
     steps:
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -26,17 +16,20 @@ jobs:
 
       - name: Pull bottles
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
+          HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ github.token }}
           HOMEBREW_GITHUB_PACKAGES_USER: ${{ github.actor }}
-        run: brew pr-pull --debug --tap=${{ github.repository }} ${{ inputs.pull-request-number }}
+          PULL_REQUEST: ${{ github.event.pull_request.number }}
+        run: brew pr-pull --debug --tap=$GITHUB_REPOSITORY $PULL_REQUEST
 
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          token: ${{ github.token }}
           branch: main
 
       - name: Delete branch
-        if: ${{ inputs.origin-branch-to-delete != '' }}
-        run: git push --delete origin ${{ inputs.origin-branch-to-delete }}
+        if: github.event.pull_request.head.repo.fork == false
+        env:
+          BRANCH: ${{ github.event.pull_request.head.ref }}
+        run: git push --delete origin $BRANCH
