--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,10 @@ jobs:
             os-gen: monterey
             os-arch: arm64
 
-          - os-type: macos
-            os-gen: monterey
-            os-arch: x64
+          # temporarily commented out
+          # - os-type: macos
+          #   os-gen: monterey
+          #   os-arch: x64
 
     steps:
       - name: Prepare workspace
@@ -54,12 +55,13 @@ jobs:
 
       - run: brew test-bot --only-tap-syntax
 
-      - run: brew test-bot --only-formulae
-        if: github.event_name == 'pull_request'
+      # temporarily disabled
+      # - run: brew test-bot --only-formulae
+      #   if: github.event_name == 'pull_request'
 
-      - name: Upload bottles as artifact
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@main
-        with:
-          name: bottles
-          path: '*.bottle.*'
+      # - name: Upload bottles as artifact
+      #   if: github.event_name == 'pull_request'
+      #   uses: actions/upload-artifact@main
+      #   with:
+      #     name: bottles
+      #     path: '*.bottle.*'
